--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "node server/index.js"
   },
   "dependencies": {
+    "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
